<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
android:layout_height="match_parent"    >

<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="#00acc1"
        android:text="@string/head"
        android:textColor="#f9bdbb"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

    <TextView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"
        android:padding="15dp" />

</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:orientation="horizontal" >

    <TextView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:padding="15dp" />

</LinearLayout><LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:orientation="horizontal" >

    <TextView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_hint"
        android:inputType="phone"
        android:padding="15dp" />

</LinearLayout><LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:orientation="horizontal" >

    <TextView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/dob"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/date_edt"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:hint="@string/date_hint"
        android:inputType="date"
        android:padding="15dp" />

    <Button
        android:id="@+id/date_btn"
        android:layout_width="24dp"
        android:layout_height="wrap_content"
        android:background="@drawable/dropdown" />

</LinearLayout><LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:orientation="horizontal" >

    <TextView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/time_edt"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:hint="@string/time_hint"
        android:inputType="time"
        android:padding="15dp" />

    <Button
        android:id="@+id/time_btn"
        android:layout_width="24dp"
        android:layout_height="wrap_content"
        android:background="@drawable/dropdown" />

</LinearLayout>
<Button
    android:id="@+id/submit_btn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="#00acc1"
    android:text="@string/submit"
    android:textColor="#000000" />


</LinearLayout>
</ScrollView>